du02/css/style.css
* {
    box-sizing: border-box;
}

body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #9b9b9b;
}

.layout {
    display: grid;
    grid-template-areas:
    "header header header"
    "leftBorder main rightBorder" 
    "footer footer footer";
    grid-template-rows: 10vh 80vh 10vh;
    grid-template-columns: 4fr 8fr 4fr;
}

.header {
    grid-area: header;
    display: grid;
    grid-template-areas:
    "headerTitle locationBox cameraAngleBox onOffController";
    grid-template-rows: 1fr;
    grid-template-columns: 2fr 1fr 1fr 1fr;
    background-color: #333;
    color: white;
    align-items: center;
}

.header h1 {
    grid-area: headerTitle;
    padding-left: 1vw;
    margin: 0;
}

/* ---------- LOCATION, CAMERA ANGLE, ON/OFF CONTROLLER ---------- */

#locationBox {
    grid-area: locationBox;
    display: flex;
    border: 0.2em solid white;
    width: fit-content;
    padding: 0.5em;
    margin: 0;
}

#location {
    text-align: left;
    padding-left: 0.5em;
    padding-right: 0.5em;
}

#cameraAngleBox {
    grid-area: cameraAngleBox;
    display: flex;
    align-items: flex-start;
    border: 0.2em solid white;
    width: fit-content;
    padding: 0.5em;
    margin: 0;
}

#cameraAngleTitle {
    padding-left: 0.5em;
    padding-right: 0.5em;
}

#cameraAngle {
    text-align: left;
    padding-left: 0.5em;
}

#onOffController {
    grid-area: onOffController;
    display: grid;
    grid-template-areas:
    "systemController"
    "HUDController";
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr;
    align-items: center;
    border: 0.2em solid white;
    width: fit-content;
}

#systemController {
    grid-area: systemController;
    display: flex;
    align-items: center;
    justify-content: center;
    width: fit-content;
    padding: 0.5em;
    padding-bottom: 0%;
    margin: 0;
}

#HUDController {
    grid-area: HUDController;
    display: flex;
    align-items: center;
    justify-content: center;
    width: fit-content;
    padding: 0.5em;
    padding-top: 0%;
    margin: 0;
}

#onLight {
    margin-left: 0.5em;
    margin-right: 0.5em;
    color: green;
}

#offLight {
    margin-left: 0.5em;
    margin-right: 2em;
    color: gray;
}

/* ---------- switch ---------- */
 .switch input {
    position: absolute;
    opacity: 0;
  }
  
  .switch {
    display: inline-block;
    font-size: 20px; /* 1 */
    height: 1em;
    width: 2em;
    background: #BDB9A6;
    border-radius: 1em;
  }
  
  .switch div {
    height: 1em;
    width: 1em;
    border-radius: 1em;
    background: #FFF;
    box-shadow: 0 0.1em 0.3em rgba(0,0,0,0.3);
    -webkit-transition: all 300ms;
       -moz-transition: all 300ms;
            transition: all 300ms;
  }
  
  .switch input:checked + div {
    -webkit-transform: translate3d(100%, 0, 0);
       -moz-transform: translate3d(100%, 0, 0);
            transform: translate3d(100%, 0, 0);
  }

#restartBttn {
    cursor: pointer;
    background-color: yellow;
}

#onLightHUD {
    margin-left: 0.5em;
    margin-right: 0.5em;
    color: green;
}

#offLightHUD {
    margin-left: 0.5em;
    margin-right: 2em;
    color: gray;
}

.leftBorder {
    display: flex;
    grid-area: leftBorder;
    background-color: #555;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex-wrap: wrap;
}

/* ---------- MOVEMENT BUTTONS ---------- */

.movementButtons {
    display: grid;
    grid-template-areas: 
    "mov-title mov-title mov-title"
    ". mov-up ."
    "mov-left . mov-right"
    ". mov-down .";
    grid-template-rows: 1fr 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr;

    color: white;
    margin-top: 10%;
    margin-bottom: 10%;
    width: 40%;
    height: fit-content;
    padding: 10px;
    border: 0.4em solid rgb(210, 209, 209);
    justify-items: center;
}

#movementButtonsTitle {
    grid-area: mov-title;
    text-align: center;
    padding-bottom: 10%;
    width: fit-content;
}

.movementButton {
    display: inline;
    padding: 0%;
    cursor: pointer;
    width: 2vw;
    height: 2vw;
    font-size: min(1.5em, 2vw);
    text-align: center;
}

#forwardBtn {
    grid-area: mov-up;
}

#leftBtn {
    grid-area: mov-left;
}

#rightBtn {
    grid-area: mov-right;
}

#backwardBtn {
    grid-area: mov-down;
}

#accessPanel {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: fit-content;
    height: fit-content;
    border: 0.4em solid rgb(210, 209, 209);
    color: white;
    margin-bottom: 2em;
}

#accessPanelTitle {
    padding: 10px;
    width: fit-content;
}

#accessPanelMenu {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: fit-content;
    height: fit-content;
}

#downloadDataBtn {
    padding: 2.5%;
}

.dropdown {
    display: inline-block;
    padding: 2.5%;
}

#uploadFileBtn {
    padding: 2.5%;
    width: 5vw;
}

.dropdown-content {
    display: flex;
    flex-direction: column;
    gap: 1em;
    padding: 2.5%;
    border: 0.2em solid rgb(210, 209, 209);
}

#updateSoftwareBtn {
    padding: 2.5%;
}

.main {
    grid-area: main;
    padding: 1vh;
    background-image: url("../img/mars_footage.png");
    background-size: cover;
    color: white;
    text-align: center;
    border: 0.2em solid rgb(0, 196, 20);
}

.rightBorder {
    display: flex;
    grid-area: rightBorder;
    background-color: #555;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex-wrap: wrap;
}

/* ---------- CAMERA BUTTONS ---------- */

.cameraButtons {
    display: grid;
    grid-template-areas: 
    "cam-title cam-title cam-title"
    ". cam-up ."
    "cam-left . cam-right"
    ". cam-down .";
    grid-template-rows: 1fr 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr;

    color: white;
    margin-top: 10%;
    margin-bottom: 10%;
    width: 40%;
    height: fit-content;
    padding: 10px;
    border: 0.4em solid rgb(210, 209, 209);
    justify-items: center;
}

#cameraButtonsTitle {
    grid-area: cam-title;
    text-align: center;
    padding-bottom: 10%;
    width: fit-content;
}

.cameraButton {
    display: inline;
    padding: 0%;
    cursor: pointer;
    width: 2vw;
    height: 2vw;
    font-size: min(1.5em, 2vw);
    text-align: center;
}

#cameraUpBtn {
    grid-area: cam-up;
}

#cameraLeftBtn {
    grid-area: cam-left;
}

#cameraRightBtn {
    grid-area: cam-right;
}

#cameraDownBtn {
    grid-area: cam-down;
}

#sensorsBox {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: fit-content;
    height: fit-content;
    border: 0.4em solid rgb(210, 209, 209);
    color: white;
    margin-bottom: 2em;
}

#sensorsTitle {
    padding: 10px;
    padding-bottom: 0;
    width: fit-content;
}

.sensor {
    padding: 10px;
}

#energySourceOptionsBox {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: fit-content;
    height: fit-content;
    border: 0.4em solid rgb(210, 209, 209);
    color: white;
}

#energySourceOptionsTitle {
    padding: 10px;
    padding-bottom: 0;
    width: fit-content;
}

.energySource {
    padding: 10px;
}

.footer {
    grid-area: footer;
    display: grid;
    grid-template-areas:
    "infoBox statusBox";
    grid-template-rows: 1fr;
    grid-template-columns: 2fr 1fr;
    background-color: #333;
    flex-wrap: wrap;
    color: white;
    align-items: center;
}

#infoBox {
    color: white;
    display: flex;
    flex-wrap: wrap;
}

#infoTitle {
    padding: 10px;
    width: fit-content;
}

#statusBox {
    display: flex;
    align-items: center;
    justify-content: center;
    width: fit-content;
    height: fit-content;
    border: 0.4em solid rgb(210, 209, 209);
    color: white;
}

.status {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    justify-items: center;
    padding: 10px;
    /* auto text size */
    font-size: min(1em, min(2vw, 2vh));
}

